Tests/Fail/Test017.ML
(* This should raise an exception. *)
TextIO.canInput(TextIO.stdIn, ~1);
